24w09a -- ItemStack "DataComponents" methods introduced. It Will break things.